# seL4_projects_libs

./: CMakeLists.txt  Findsel4_projects_libs.cmake  Kbuild  Kconfig  LICENSE.txt  Makefile  README  README.md
libsel4arm-vmm/: CMakeLists.txt  Kbuild  Kconfig  Makefile
libsel4arm-vmm/include/sel4arm-vmm/: atags.h  devices.h  fault.h  guest_vspace.h  images.h  vchan_vm_component.h  vm.h
libsel4arm-vmm/include/sel4arm-vmm/devices/: generic_forward.h  vgic.h  vpci.h  vram.h  vusb.h
libsel4arm-vmm/include/sel4arm-vmm/exynos5/: devices.h
libsel4arm-vmm/include/sel4arm-vmm/tk1/: devices.h
libsel4arm-vmm/src/: copyinout.c  devices.c  devices.h  fault.c  guest_vspace.c  irq_combiner.c  irq_combiner.h  vchan_vm_component.c  vm.c  vm.h
libsel4arm-vmm/src/devices/: generic_ac.c  generic_forward.c  vpci.c  vusb.c
libsel4arm-vmm/src/devices/arm/: vgic.c  vgic.h
libsel4arm-vmm/src/devices/exynos/: vgpio.c  vmct.c  vuart.c
libsel4arm-vmm/src/devices/exynos5/: irq_combiner.c  irq_combiner.h  misc_devices.c  vclock.c  vmct.c  vpower.c  vram.c  vuart.c
libsel4arm-vmm/src/devices/tk1/: misc_devices.c  vclock.c  vgpio.c  vpower.c  vram.c  vsysreg.c  vuart.c
libsel4arm-vmm/src/images/: atags.c  images.c
libsel4arm-vmm/src/sel4_arch/aarch64/: fault.c
libsel4arm-vmm/src/sel4_arch/arm_hyp/: fault.c
libsel4dma/: CMakeLists.txt  Kbuild  Kconfig  Makefile
libsel4dma/include/dma/: dma.h
libsel4dma/src/: dma.c
libsel4keyboard/: CMakeLists.txt  Kbuild  Makefile  README  README.md
libsel4keyboard/arch_include/x86/keyboard/: keyboard.h
libsel4keyboard/include/keyboard/: codes.h
libsel4keyboard/src/: codes.c
libsel4keyboard/src/arch-x86/: keyboard.c
libsel4nanopb/: CMakeLists.txt  README.md
libsel4nanopb/include/sel4nanopb/: sel4nanopb.h
libsel4nanopb/src/: common.c
libsel4pci/: CMakeLists.txt
libsel4pci/arch_include/arm/sel4pci/: vmm_virtio_emul.h
libsel4pci/arch_include/x86/sel4pci/: vmm_pci_helper.h  vmm_virtio_emul.h
libsel4pci/include/sel4pci/: con_forward.h  debug.h  pci.h  pci_helper.h  virtio_emul.h
libsel4pci/src/: pci.c  pci_helper.c  virtio_console_emul.c  virtio_emul.c  virtio_net_emul.c  vmm_virtio_emul.c
libsel4pci/src/arch/arm/: vmm_virtio_emul.c
libsel4pci/src/arch/x86/: vmm_pci_helper.c  vmm_virtio_emul.c
libsel4rpc/: CMakeLists.txt  README.md  rpc.proto
libsel4rpc/include/sel4rpc/: client.h  server.h
libsel4rpc/src/: client.c  server.c
libsel4vchan/: CMakeLists.txt  Kbuild  Kconfig  Makefile
libsel4vchan/include/linuxsel4vchan/: sel4libvchan.h  vmm_driver.h
libsel4vchan/include/sel4vchan/: libvchan.h  vchan_component.h  vchan_copy.h  vchan_sharemem.h  vmm_manager.h
libsel4vchan/src/: vchan_component.c
libsel4vm/: CMakeLists.txt  README.md
libsel4vm/arch_include/arm/sel4vm/: boot_arch.h  guest_memory_arch.h  guest_vm_arch.h  guest_vspace_arch.h
libsel4vm/arch_include/x86/sel4vm/: boot_arch.h  guest_memory_arch.h  guest_vm_arch.h  ioports.h
libsel4vm/docs/: README.md  libsel4vm_arm_guest_vm.md  libsel4vm_boot.md  libsel4vm_guest_arm_context.md  libsel4vm_guest_iospace.md  libsel4vm_guest_irq_controller.md  libsel4vm_guest_memory.md  libsel4vm_guest_memory_helpers.md  libsel4vm_guest_ram.md  libsel4vm_guest_vcpu_fault.md  libsel4vm_guest_vm.md  libsel4vm_guest_vm_util.md  libsel4vm_guest_x86_context.md  libsel4vm_x86_guest_vm.md  libsel4vm_x86_ioports.md  libsel4vm_x86_vmcall.md
libsel4vm/include/sel4vm/: boot.h  guest_iospace.h  guest_irq_controller.h  guest_memory.h  guest_memory_helpers.h  guest_memory_util.h  guest_ram.h  guest_vcpu_fault.h  guest_vm.h  guest_vm_exits.h  guest_vm_util.h  guest_vspace.h
libsel4vm/sel4-arm-vmm/include/sel4arm-vmm/: devices.h  fault.h  vm.h
libsel4vm/sel4-arm-vmm/include/sel4vm/: devices.h  fault.h  guest_vspace.h  images.h  vchan_vm_component.h  vm.h
libsel4vm/sel4-arm-vmm/src/: copyinout.c  devices.c  devices.h  fault.c  guest_vspace.c  vm.c  vm.h
libsel4vm/sel4-arm-vmm/src/devices/: generic_ac.c  generic_forward.c  vpci.c  vusb.c
libsel4vm/sel4-arm-vmm/src/images/: atags.c  images.c
libsel4vm/sel4-x86-vmm/include/sel4vm/: debug.h  guest_state.h  interrupt.h  io.h  mmio.h  vmcall.h  vmcs.h  vmexit.h  vmm.h
libsel4vm/src/: boot.c  guest_memory.c  guest_memory.h  guest_memory_helpers.c  guest_memory_map.h  guest_memory_utils.c  guest_ram.c  guest_vcpu_fault.c  guest_vspace.c  guest_vspace.h  vm.c  vm.h  vm_boot.h
libsel4vmm-core/: CMakeLists.txt  README.md
libsel4vmm-core/include/util/: io.h
libsel4vmm-core/src/util/: io.c
libsel4vmmplatsupport/: CMakeLists.txt  README.md  TODO.txt
libsel4vmmplatsupport/docs/: README.md  libsel4vmmplatsupport_arm_ac_device.md  libsel4vmmplatsupport_arm_generic_forward_device.md  libsel4vmmplatsupport_arm_guest_boot_init.md  libsel4vmmplatsupport_arm_guest_reboot.md  libsel4vmmplatsupport_arm_guest_vcpu_fault.md  libsel4vmmplatsupport_arm_guest_vcpu_util.md  libsel4vmmplatsupport_arm_vpci.md  libsel4vmmplatsupport_arm_vusb.md  libsel4vmmplatsupport_cross_vm_connection.md  libsel4vmmplatsupport_device.md  libsel4vmmplatsupport_device_utils.md  libsel4vmmplatsupport_guest_image.md  libsel4vmmplatsupport_guest_memory_util.md  libsel4vmmplatsupport_guest_vcpu_util.md  libsel4vmmplatsupport_ioports.md  libsel4vmmplatsupport_pci.md  libsel4vmmplatsupport_pci_helper.md  libsel4vmmplatsupport_virtio_con.md  libsel4vmmplatsupport_virtio_net.md  libsel4vmmplatsupport_x86_acpi.md  libsel4vmmplatsupport_x86_guest_boot_init.md  libsel4vmmplatsupport_x86_vmm_pci_helper.md
libsel4vmmplatsupport/include/sel4vmmplatsupport/: device.h  device_utils.h  guest_image.h  guest_irq_controller.h  guest_memory_util.h  guest_vcpu_util.h  ioports.h
libsel4vmmplatsupport/src/: device.c  device_utils.c  guest_irq_controller.c  guest_memory_util.c  ioports.c
libsel4vmmplatsupport/src/drivers/: cross_vm_connection.c  pci.c  pci_helper.c  virtio_blk.c  virtio_block_emul.c  virtio_con.c  virtio_console_emul.c  virtio_emul.c  virtio_emul_helpers.c  virtio_emul_helpers.h  virtio_net.c  virtio_net_emul.c  virtio_vsock.c  virtio_vsock_emul.c
src/: codes.c  (+16 more)
(+356 files in other folders)
